# evernode

./: .gitignore  Cargo.toml  README.md
plugins/api/: Cargo.toml
plugins/api/src/: lib.rs
plugins/sdk/: Cargo.toml
plugins/sdk/src/: lib.rs
plugins/sqlite/: Cargo.toml
plugins/sqlite/src/: lib.rs
prisma/: Cargo.toml  dev.db  dev.db-journal  schema.prisma
prisma/migrations/20221027162410_init/: migration.sql
src/cli/: .gitignore  Cargo.toml
src/cli/src/: arguments.rs  main.rs  shared.rs
src/cli/src/commands/: mod.rs  new.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/functions/: db.rs
src/widgets/: Cargo.toml
src/widgets/src/: lib.rs
