[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/core",
    "prisma",
    "plugins/sqlite",
    "plugins/api",
    "plugins/sdk",
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features = [
    "sqlite",
    "migrations",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features = [
    "sqlite",
    "migrations",
] }
anyhow = "1.0.66"
