[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.25.4", features = [
    "serde_json",
    "chrono",
    "url",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }
sdk = { path = "../sdk" }
anyhow = { workspace = true }
async-trait = "0.1.50"
serde_json = "1.0"
