[package]
name = "evernode"
version = "0.1.0"
edition = "2021"
default-run = "evernode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
node_core = { path = "../core" }
anyhow = "1.0.66"
async-trait = "0.1.58"
requestty = "0.5.0"
names = { version = "0.14.0" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
