[package]
name = "evernode"
version = "0.1.0"
edition = "2021"
default-run = "evernode"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["full"] }
node_core = { path = "../core" }
requestty = "0.5.0"
names = { version = "0.14.0" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
node_api = { path = "../../plugins/api" }
widgets = { path = "../widgets" }
