[package]
name = "node_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dirs = "4.0.0"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prisma-client-rust = { workspace = true, features = [
    "mongodb",
    "mysql",
    "sqlite",
    "mssql",
    "postgresql",
    "migrations",
] }
prisma-client-rust-cli = { workspace = true, features = [
    "mongodb",
    "mysql",
    "sqlite",
    "mssql",
    "postgresql",
    "migrations",
] }
thiserror = "1.0.37"
log = "0.4.17"
colored = "2.0.0"
